kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-hello-world-lb
spec:
  type: LoadBalancer
  selector:
    app: flask-hello-world
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5001
