kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: test.flaskapptest.run.place
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-hello-world
                port:
                  number: 80
